--- a/sass/web-dev-intro/day1/3-flexbox-grid/css/floats.css
+++ b/sass/web-dev-intro/day1/3-flexbox-grid/css/floats.css
@@ -38,7 +38,7 @@ a {
 
 .main-row {
 	background-color: rgb(248, 248, 125);
-	width: 100%;
+	flex-basis: 100%;
 	text-align: justify;
 	margin: 15px;
 
@@ -72,7 +72,7 @@ a {
 
 .second-row {
 	background-color: rgb(255, 204, 255);
-	width: 100%;
+	flex-basis: 100%;
 	text-align: justify;
 	margin: 15px;
 	flex-grow: 1;
@@ -95,14 +95,14 @@ a {
 
 .third-row-1 {
 	background-color: rgb(204, 255, 255);
-	width: 100%;
+	flex-basis: 100%;
 	margin: 15px;
 	text-align: justify;
 }
 
 .third-row-2 {
 	background-color: rgb(204, 255, 255);;
-	width: 100%;
+	flex-basis: 100%;
 	margin: 15px;
 	text-align: justify;
 }
@@ -125,7 +125,7 @@ a {
 
 .fourth-row {
 	background-color: rgb(204, 204, 255);
-	width: 100%;
+	flex-basis: 100%;
 	margin: 15px;
 	text-align: justify;
 }
@@ -146,7 +146,7 @@ a {
 
 	.main-row {
 		background-color: rgb(248, 248, 125);
-		width: 45%;
+		flex-basis: 45%;
 		text-align: justify;
 		margin: 10px;
 		flex-grow: 1;
@@ -182,7 +182,7 @@ a {
 
 	.second-row {
 		background-color: rgb(255, 204, 255);
-		width: 48%;
+		flex-basis: 48%;
 		text-align: justify;
 		margin: 15px;
 		flex-grow: 1;
@@ -205,14 +205,14 @@ a {
 
 	.third-row-1 {
 		background-color: rgb(204, 255, 255);
-		width: 100%;
+		flex-basis: 100%;
 		margin: 15px;
 		text-align: justify;
 	}
 
 	.third-row-2 {
 		background-color: rgb(204, 255, 255);;
-		width: 100%;
+		flex-basis: 100%;
 		margin: 15px;
 		text-align: justify;
 	}
@@ -235,7 +235,7 @@ a {
 
 	.fourth-row {
 		background-color: rgb(204, 204, 255);
-		width: 100%;
+		flex-basis: 100%;
 		margin: 15px;
 		text-align: justify;
 	}
@@ -256,7 +256,7 @@ a {
 
 	.main-row {
 		background-color: rgb(248, 248, 125);
-		width: 20%;
+		flex-basis: 20%;
 		text-align: justify;
 		margin: 15px;
 		flex-grow: 1;
@@ -289,7 +289,7 @@ a {
 
 	.second-row {
 		background-color: rgb(255, 204, 255);
-		width: 48%;
+		flex-basis: 48%;
 		text-align: justify;
 		margin: 15px;
 		flex-grow: 1;
@@ -312,14 +312,14 @@ a {
 
 	.third-row-1 {
 		background-color: rgb(204, 255, 255);
-		width: 25%;
+		flex-basis: 25%;
 		margin: 15px;
 		text-align: justify;
 	}
 
 	.third-row-2 {
 		background-color: rgb(204, 255, 255);;
-		width: 75%;
+		flex-basis: 75%;
 		margin: 15px;
 		text-align: justify;
 	}
@@ -342,7 +342,7 @@ a {
 
 	.fourth-row {
 		background-color: rgb(204, 204, 255);
-		width: 100%;
+		flex-basis: 100%;
 		margin: 15px;
 		text-align: justify;
 	}
