--- a/sass/web-dev-intro/day1/3-flexbox-grid/css/floats.css
+++ b/sass/web-dev-intro/day1/3-flexbox-grid/css/floats.css
@@ -25,330 +25,125 @@ a {
 	background-color: #fff;
 }
 
-
-
 /* grid system -- mobile first! */
-.main-flex-container {
+
+.row {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: flex-start;
-	flex-wrap: wrap;
-	
 }
 
-.main-row {
-	background-color: rgb(248, 248, 125);
-	flex-basis: 100%;
-	text-align: justify;
-	margin: 15px;
-
+[class*="col-"] {
+	margin: 1% 0% 1% 2%;
 }
 
-.main-row > img {
+.col-1 {
+	background-color: #e1bee7;
+}
+
+.col-1 > img {
 	width: 100%;
-	padding: 0px;
+	margin: 0px;
+}
+
+.col-2 {
+	background-color: #b39ddb;
+	padding: 1% 0%;
+}
+
+.col-2 > img {
+	width: 100%;
+	margin: 0px;
+}
+
+.col-3-bg {
+	background-color: #c5e1a5;
+	padding: 1% 0%;
+}
+
+.col-3 > img {
+	width: 100%;
+	margin: 0px;
+}
+
+.col-4 {
+	background-color: #9fa8da;
+	padding: 1% 0%;
+}
+
+.col-4 > img {
+	width: 100%;
+	margin: 0px;
 }
 
 .article-title, .article-text, .article-more {
-	padding: 10px;
+	padding: 0% 2%;
 }
 
 .article-more {
-	font-size: 0.8rem;
-	padding: 0px;
 	white-space: nowrap;
+	font-size: 0.9rem;
 }
 
 
-.second-flex-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-}
-
-.second-sm-flex-container {
-	flex-wrap: wrap;
-}
-
-.second-row {
-	background-color: rgb(255, 204, 255);
-	flex-basis: 100%;
-	text-align: justify;
-	margin: 15px;
-	flex-grow: 1;
-}
-
-.second-row > img {
-	width: 100%;
-	padding: 0px;
-}
-
-.third-flex-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-}
-
-.third-sm-flex-container {
-	flex-wrap: wrap;
-}
-
-.third-row-1 {
-	background-color: rgb(204, 255, 255);
-	flex-basis: 100%;
-	margin: 15px;
-	text-align: justify;
-}
-
-.third-row-2 {
-	background-color: rgb(204, 255, 255);;
-	flex-basis: 100%;
-	margin: 15px;
-	text-align: justify;
-}
-
-.third-row-1 > img {
-	width: 100%;
-	margin: 0px;
-}
-
-.third-row-2 > img {
-	width: 100%;
-	margin: 0px;
-}
-
-.fourth-flex-container {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-}
-
-.fourth-row {
-	background-color: rgb(204, 204, 255);
-	flex-basis: 100%;
-	margin: 15px;
-	text-align: justify;
-}
-
-.fourth-row > img {
-	width: 100%;
-	margin: 0px;
-}
-
-
-/* Mobile Landscape Screen Sizes */
-@media only screen and (min-width: 480px) and (max-width: 939px) {
-	.main-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-	}
-
-	.main-row {
-		background-color: rgb(248, 248, 125);
-		flex-basis: 45%;
-		text-align: justify;
-		margin: 10px;
-		flex-grow: 1;
-
-	}
-
-	.main-row > img {
-		width: 100%;
-		padding: 0px;
-	}
-
-	.article-title, .article-text, .article-more {
-		padding: 10px;
-	}
-
-	.article-more {
-		font-size: 0.8rem;
-		padding: 0px;
-		white-space: nowrap;
-	}
-
+/* Small Tablet Screen Sizes - size md*/
+@media only screen and (min-width: 540px) and (max-width: 719px) {
 	
-	.second-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
+	.col-1 {
+		flex: 0 0 47%;
+	}
+	
+	.col-2 {
+		flex: 0 0 47%;
 	}
 
-	.second-lg-flex-container {
-		flex-wrap: nowrap;
+	.col-3 {
+		flex: 0 0 47%;
 	}
 
-
-	.second-row {
-		background-color: rgb(255, 204, 255);
-		flex-basis: 48%;
-		text-align: justify;
-		margin: 15px;
-		flex-grow: 1;
+	.col-4 {
+		flex: 0 0 96%;
 	}
 
-	.second-row > img {
-		width: 100%;
-		padding: 0px;
+}
+
+
+/* Tablet Landscape Screen Sizes - size md*/
+@media only screen and (min-width: 720px) and (max-width: 959px) {
+
+	.col-1 {
+		flex: 0 0 22.5%;
+	}
+	
+	.col-2 {
+		flex: 0 0 47%;
 	}
 
-	.third-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
+	.col-3 {
+		flex: 0 0 71.5%;
 	}
 
-	.third-lg-flex-container {
-		flex-wrap: nowrap;
-	}
-
-	.third-row-1 {
-		background-color: rgb(204, 255, 255);
-		flex-basis: 100%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.third-row-2 {
-		background-color: rgb(204, 255, 255);;
-		flex-basis: 100%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.third-row-1 > img {
-		width: 100%;
-		margin: 0px;
-	}
-
-	.third-row-2 > img {
-		width: 100%;
-		margin: 0px;
-	}
-
-	.fourth-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-	}
-
-	.fourth-row {
-		background-color: rgb(204, 204, 255);
-		flex-basis: 100%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.fourth-row > img {
-		width: 100%;
-		margin: 0px;
+	.col-4 {
+		flex: 0 0 96%;
 	}
 }
-/* Desktop screen Sizes */
-@media only screen and (min-width: 940px) {
+/* Desktop screen Sizes - size lg and beyond*/
+@media only screen and (min-width: 960px) {
 
-	.main-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
+	.col-1 {
+		flex: 0 0 22.5%;
+	}
+	
+	.col-2 {
+		flex: 0 0 47%;
 	}
 
-	.main-row {
-		background-color: rgb(248, 248, 125);
-		flex-basis: 20%;
-		text-align: justify;
-		margin: 15px;
-		flex-grow: 1;
+	.col-3 {
+		flex: 0 0 71.5%;
 	}
 
-	.main-row > img {
-		width: 100%;
-		padding: 0px;
+	.col-4 {
+		flex: 0 0 96%;
 	}
-
-	.article-title, .article-text, .article-more {
-		padding: 10px;
-	}
-
-	.article-more {
-		font-size: 0.8rem;
-		padding: 0px;
-		white-space: nowrap;
-	}
-
-	.second-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-	}
-
-	.second-lg-flex-container {
-		flex-wrap: nowrap;
-	}
-
-	.second-row {
-		background-color: rgb(255, 204, 255);
-		flex-basis: 48%;
-		text-align: justify;
-		margin: 15px;
-		flex-grow: 1;
-	}
-
-	.second-row > img {
-		width: 100%;
-		padding: 0px;
-	}
-
-	.third-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-	}
-
-	.third-lg-flex-container {
-		flex-wrap: nowrap;
-	}
-
-	.third-row-1 {
-		background-color: rgb(204, 255, 255);
-		flex-basis: 25%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.third-row-2 {
-		background-color: rgb(204, 255, 255);;
-		flex-basis: 75%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.third-row-1 > img {
-		width: 100%;
-		margin: 0px;
-	}
-
-	.third-row-2 > img {
-		width: 100%;
-		margin: 0px;
-	}
-
-	.fourth-flex-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-start;
-	}
-
-	.fourth-row {
-		background-color: rgb(204, 204, 255);
-		flex-basis: 100%;
-		margin: 15px;
-		text-align: justify;
-	}
-
-	.fourth-row > img {
-		width: 100%;
-		margin: 0px;
-	}
+	
 }
