--- a/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/styles/styles.css
+++ b/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/styles/styles.css
@@ -302,6 +302,206 @@ footer .attribution a {
   color: #3e52a3;
 }
 
+@media only screen and (min-width: 560px) {
+  .main-grid {
+    background-image: url("../images/bg-hero-desktop.svg");
+    -ms-grid-rows: 10% auto;
+        grid-template-rows: 10% auto;
+    row-gap: 20px;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "logo-1 try-button-1" "main-content-1 main-content-1" "grid-main-image-1 grid-main-image-1";
+    font-size: 1.5rem;
+  }
+  .main-grid .logo {
+    margin: 20px 0px 0px 10px;
+    width: 70%;
+  }
+  .main-grid .logo img {
+    width: 90%;
+  }
+  .main-grid .try-button {
+    width: 60%;
+    height: 45px;
+    border-radius: 25px;
+    text-align: center;
+    padding-top: 10px;
+  }
+  .main-grid .main-content {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: main-content-1;
+    margin: 20px auto;
+    text-align: center;
+    margin: 10px;
+  }
+  .main-grid .main-content .head-line {
+    font-size: 1.4em;
+    font-weight: 600;
+    padding-bottom: 30px;
+  }
+  .main-grid .main-content .headline-content {
+    font-size: 1em;
+    font-weight: 400;
+    font-family: "Open Sans", sans-serif;
+    line-height: 1.5em;
+  }
+  .main-grid .grid-main-image {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: grid-main-image-1;
+    -ms-grid-column-align: stretch;
+        justify-self: stretch;
+    text-align: center;
+    padding-bottom: 80px;
+  }
+  .main-grid .grid-main-image img {
+    width: 80%;
+  }
+  .get-started-button {
+    border-radius: 25px;
+    height: 40px;
+    width: 70%;
+    text-align: center;
+    margin: 40px auto;
+  }
+  .site-cards {
+    padding-bottom: 80px;
+  }
+  .site-cards .card-1 {
+    margin: 30px auto;
+    font-size: 1rem;
+  }
+  .site-cards .card-1 .card-content-main {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .site-cards .card-1 .card-content-main .card-header {
+    margin-bottom: 5px;
+  }
+  .site-cards .card-1 .card-content-main .card-content {
+    margin-top: 5px;
+  }
+  .site-cards .card-1 .card-img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin: 20px;
+  }
+  .site-cards .card-1 .card-img img {
+    width: 80%;
+  }
+  .site-cards .card-1-reverse .card-content-main {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .site-cards .card-1-reverse .card-img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .bottom-grid {
+    -ms-grid-rows: 40% auto;
+        grid-template-rows: 40% auto;
+    -ms-grid-columns: 2fr 5fr 2fr;
+        grid-template-columns: 2fr 5fr 2fr;
+    background-color: #00252e;
+    font-size: 1rem;
+  }
+  .bottom-grid .card-2 .card-header {
+    font-size: 1em;
+    margin: 30px 10px;
+  }
+  .bottom-grid .card-2 .get-started-button {
+    margin: 40px auto;
+    width: 60%;
+  }
+  .footer-flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    background-color: #00252e;
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.2rem;
+  }
+  .footer-flex .logo {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: 20px 20px;
+  }
+  .footer-flex .about {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+    margin: 20px 30px;
+  }
+  .footer-flex .about .contact-details {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    margin: 20px 5px;
+  }
+  .footer-flex .about .contact-details .icons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: 20px;
+            flex-flow: 20px;
+    padding-right: 20px;
+    font-size: 1em;
+  }
+  .footer-flex .about .contact-details .icon-text {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: auto;
+            flex-flow: auto;
+    font-size: 1em;
+  }
+  .footer-flex .links-1 {
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    margin: 30px 0px;
+    line-height: 2.5em;
+  }
+  .footer-flex .social {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    text-align: center;
+    letter-spacing: 2rem;
+  }
+  .footer-flex .copy {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    text-align: right;
+    margin-bottom: 5px;
+  }
+  footer .attribution {
+    text-align: right;
+  }
+}
+
 @media only screen and (min-width: 900px) {
   .main-grid {
     background-image: url("../images/bg-hero-desktop.svg");
@@ -366,115 +566,87 @@ footer .attribution a {
     text-align: center;
   }
   .site-cards {
-    display: block;
     padding-bottom: 80px;
   }
   .site-cards .card-1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    text-align: center;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    background-color: white;
-    border-radius: 5px;
-    width: 90%;
     margin: 30px auto;
     font-size: 1rem;
   }
   .site-cards .card-1 .card-content-main {
-    -webkit-box-flex: 1,;
-        -ms-flex: 1, 100%;
-            flex: 1, 100%;
-  }
-  .site-cards .card-1 .card-content-main .card-header {
-    font-size: 1.6em;
-  }
-  .site-cards .card-1 .card-content-main .card-content {
-    font-size: 1em;
-    font-weight: 400;
-    font-family: "Open Sans", sans-serif;
-    line-height: 1.5em;
-    color: #808d99;
-    width: 80%;
-    margin: 20px auto;
-  }
-  .site-cards .card-1 .card-img {
-    -webkit-box-flex: 1,;
-        -ms-flex: 1, 100%;
-            flex: 1, 100%;
-    margin: 20px;
-  }
-  .site-cards .card-1 .card-img img {
-    width: 80%;
-  }
-  .bottom-grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: 40% auto;
-        grid-template-rows: 40% auto;
-    -ms-grid-columns: 1fr 18fr 1fr;
-        grid-template-columns: 1fr 18fr 1fr;
-    background-color: #00252e;
-    font-size: 1rem;
-  }
-  .bottom-grid .empty-1 {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1/4;
-    background-color: white;
-  }
-  .bottom-grid .empty-2 {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1/4;
-    background-color: #00252e;
-  }
-  .bottom-grid .card-2 {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1/3;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    background-color: white;
-    text-align: center;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    border-radius: 5px;
-  }
-  .bottom-grid .card-2 .card-header {
-    font-size: 1em;
-    margin: 30px 10px;
-  }
-  .footer-flex {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-            flex-flow: column wrap;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .site-cards .card-1 .card-content-main .card-header {
+    margin-bottom: 5px;
+  }
+  .site-cards .card-1 .card-content-main .card-content {
+    margin-top: 5px;
+  }
+  .site-cards .card-1 .card-img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin: 20px;
+  }
+  .site-cards .card-1 .card-img img {
+    width: 80%;
+  }
+  .site-cards .card-1-reverse .card-content-main {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .site-cards .card-1-reverse .card-img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .bottom-grid {
+    -ms-grid-rows: 40% auto;
+        grid-template-rows: 40% auto;
+    -ms-grid-columns: 2fr 5fr 2fr;
+        grid-template-columns: 2fr 5fr 2fr;
+    background-color: #00252e;
+    font-size: 1rem;
+  }
+  .bottom-grid .card-2 .card-header {
+    font-size: 1em;
+    margin: 30px 10px;
+  }
+  .bottom-grid .card-2 .get-started-button {
+    margin: 40px auto;
+    width: 40%;
+  }
+  .footer-flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     background-color: #00252e;
     color: white;
     font-family: "Open Sans", sans-serif;
     font-size: 1.2rem;
   }
   .footer-flex .logo {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
     margin: 20px 20px;
   }
   .footer-flex .about {
-    margin: 20px 20px;
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    margin: 20px 80px 20px 20px;
   }
   .footer-flex .about .contact-details {
     display: -webkit-box;
@@ -502,32 +674,26 @@ footer .attribution a {
     font-size: 1em;
   }
   .footer-flex .links-1 {
-    margin-left: 20px;
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    margin: 30px 0px;
     line-height: 2.5em;
   }
   .footer-flex .social {
-    margin: 20px;
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
     text-align: center;
-    letter-spacing: 2rem;
+    letter-spacing: 0.8rem;
+    margin: 30px 0px;
   }
   .footer-flex .copy {
-    margin: 20px 10px 40px 10px;
-    padding-bottom: 10px;
-    font-size: 1em;
-  }
-  footer {
-    padding-bottom: 100px;
-    color: white;
-    background-color: #00252e;
-    font-family: "Open Sans", sans-serif;
-  }
-  footer .attribution {
-    font-size: 1rem;
-    text-align: center;
-    margin-top: 0px;
-  }
-  footer .attribution a {
-    color: #3e52a3;
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    text-align: right;
+    margin-bottom: 5px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
