--- a/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/styles/styles.scss
+++ b/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/styles/styles.scss
@@ -255,12 +255,205 @@ footer {
     }
 }
 
-
 // CSS for large mobiles and tablets portrait
-@media only screen and (min-width: 480px) {}
+@media only screen and (min-width: 560px) {
+
+    .main-grid {
+        background-image: url("../images/bg-hero-desktop.svg");
+        grid-template-rows: 10% auto;
+        row-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "logo-1 try-button-1"
+            "main-content-1 main-content-1"
+            "grid-main-image-1 grid-main-image-1";
+        font-size: 1.5rem;
 
 
-// css for desktops and tablets in landscape.
+        .logo {
+            margin: 20px 0px 0px 10px;
+            width: 70%;
+
+            img {
+                width: 90%;
+            }
+        }
+
+        .try-button {
+            width: 60%;
+            height: 45px;
+            border-radius: 25px;
+            text-align: center;
+            padding-top: 10px;
+        }
+
+        .main-content {
+            grid-area: main-content-1;
+            margin: 20px auto;
+            text-align: center;
+            margin: 10px;
+
+            .head-line {
+                font-size: 1.4em;
+                font-weight: 600;
+                padding-bottom: 30px
+            }
+
+            .headline-content {
+                font-size: 1em;
+                font-weight: 400;
+                font-family: $open-sans-font;
+                line-height: 1.5em;
+            }
+
+        }
+
+        .grid-main-image {
+            grid-area: grid-main-image-1;
+            justify-self: stretch;
+            text-align: center;
+            padding-bottom: 80px;
+
+            img {
+                width: 80%;
+            }
+        }
+    }
+
+    .get-started-button {
+        border-radius: 25px;
+        height: 40px;
+        width: 70%;
+        text-align: center;
+        margin: 40px auto;
+    }
+
+    .site-cards {
+        padding-bottom: 80px;
+
+        .card-1 {
+            margin: 30px auto;
+            font-size: 1rem;
+
+            .card-content-main {
+                flex: 1;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
+
+                .card-header {
+                    margin-bottom: 5px;
+                }
+
+                .card-content {
+                    margin-top: 5px;
+                }
+            }
+
+            .card-img {
+                flex: 1;
+                margin: 20px;
+
+                img {
+                    width: 80%;
+                }
+            }
+        }
+
+        .card-1-reverse {
+
+            .card-content-main {
+                order: 1;
+            }
+
+            .card-img {
+                order: 2;
+            }
+        }
+    }
+
+    .bottom-grid {
+        grid-template-rows: 40% auto;
+        grid-template-columns: 2fr 5fr 2fr;
+        background-color: $dark-cyan;
+        font-size: 1rem;
+
+        .card-2 {
+            .card-header {
+                font-size: 1em;
+                margin: 30px 10px;
+            }
+
+            .get-started-button {
+                margin: 40px auto;
+                width: 60%;
+            }
+        }
+    }
+
+    .footer-flex {
+        flex-flow: row wrap;
+        background-color: $dark-cyan;
+        color: white;
+        font-family: $open-sans-font;
+        font-size: 1.2rem;
+
+        .logo {
+            flex-basis: 100%;
+            margin: 20px 20px;
+        }
+
+        .about {
+            flex-basis: 40%;
+            margin: 20px 30px;
+
+            .contact-details {
+                display: flex;
+                flex-flow: row nowrap;
+                margin: 20px 5px;
+
+                .icons {
+                    flex-flow: 20px;
+                    padding-right: 20px;
+                    font-size: 1em;
+                }
+
+                .icon-text {
+                    flex-flow: auto;
+                    font-size: 1em;
+                }
+            }
+        }
+
+        .links-1 {
+            flex-basis: 20%;
+            margin: 30px 0px;
+            line-height: 2.5em;
+        }
+
+        .social {
+            flex-basis: 100%;
+            align-self: center;
+            text-align: center;
+            letter-spacing: 2rem;
+        }
+
+        .copy {
+            flex: 100%;
+            text-align: right;
+            margin-bottom: 5px;
+        }
+    }
+
+    footer {
+
+        .attribution {
+            text-align: right;
+        }
+    }
+}
+
+// CSS for tablets landscape and desktop
 @media only screen and (min-width: 900px) {
 
     .main-grid {
@@ -277,7 +470,7 @@ footer {
 
         .logo {
             margin: 20px 0px 0px 10px;
-            width:70%;
+            width: 70%;
 
             img {
                 width: 90%;
@@ -332,40 +525,29 @@ footer {
     }
 
     .site-cards {
-        display: block;
         padding-bottom: 80px;
 
         .card-1 {
-            display: flex;
-            flex-flow: row wrap;
-            text-align: center;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-            background-color: white;
-            border-radius: 5px;
-            width: 90%;
             margin: 30px auto;
             font-size: 1rem;
 
             .card-content-main {
-                flex: 1, 100%;
+                flex: 1;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
 
                 .card-header {
-                    font-size: 1.6em;
+                    margin-bottom: 5px;
                 }
 
                 .card-content {
-                    font-size: 1em;
-                    font-weight: 400;
-                    font-family: $open-sans-font;
-                    line-height: 1.5em;
-                    color: $greyish-blue;
-                    width: 80%;
-                    margin: 20px auto;
+                    margin-top: 5px;
                 }
             }
 
             .card-img {
-                flex: 1, 100%;
+                flex: 1;
                 margin: 20px;
 
                 img {
@@ -373,58 +555,53 @@ footer {
                 }
             }
         }
+
+        .card-1-reverse {
+
+            .card-content-main {
+                order: 1;
+            }
+
+            .card-img {
+                order: 2;
+            }
+        }
     }
 
     .bottom-grid {
-        display: grid;
         grid-template-rows: 40% auto;
-        grid-template-columns: 1fr 18fr 1fr;
+        grid-template-columns: 2fr 5fr 2fr;
         background-color: $dark-cyan;
         font-size: 1rem;
 
-        .empty-1 {
-            grid-row: 1/2;
-            grid-column: 1/4;
-            background-color: white;
-        }
-
-        .empty-2 {
-            grid-row: 3/4;
-            grid-column: 1/4;
-            background-color: $dark-cyan;
-        }
-
         .card-2 {
-            grid-row: 1/3;
-            grid-column: 2/3;
-            background-color: white;
-            text-align: center;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-            border-radius: 5px;
-
             .card-header {
                 font-size: 1em;
                 margin: 30px 10px;
             }
 
-
+            .get-started-button {
+                margin: 40px auto;
+                width: 40%;
+            }
         }
     }
 
     .footer-flex {
-        display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
         background-color: $dark-cyan;
         color: white;
         font-family: $open-sans-font;
         font-size: 1.2rem;
 
         .logo {
+            flex-basis: 100%;
             margin: 20px 20px;
         }
 
         .about {
-            margin: 20px 20px;
+            flex-basis: 20%;
+            margin: 20px 80px 20px 20px;
 
             .contact-details {
                 display: flex;
@@ -445,37 +622,23 @@ footer {
         }
 
         .links-1 {
-            margin-left: 20px;
+            flex-basis: 20%;
+            margin: 30px 0px;
             line-height: 2.5em;
         }
 
         .social {
-            margin: 20px;
+            flex-basis: 20%;
+            align-self: flex-start;
             text-align: center;
-            letter-spacing: 2rem;
+            letter-spacing: 0.8rem;
+            margin: 30px 0px;
         }
 
         .copy {
-            margin: 20px 10px 40px 10px;
-            padding-bottom: 10px;
-            font-size: 1em;
-        }
-    }
-
-    footer {
-        padding-bottom: 100px;
-        color: white;
-        background-color: $dark-cyan;
-        font-family: $open-sans-font;
-
-        .attribution {
-            font-size: 1rem;
-            text-align: center;
-            margin-top: 0px;
-        }
-
-        .attribution a {
-            color: hsl(228, 45%, 44%);
+            flex: 100%;
+            text-align: right;
+            margin-bottom: 5px;
         }
     }
 }
